alignment fix for sidebar buttons

--- a/assets/scss/elements/_filter.scss
+++ b/assets/scss/elements/_filter.scss
@@ -189,4 +189,7 @@
 		}
 	}
 
+	.cp-button {
+		justify-content: space-between;
+	}
 }
